<resources>
    <string name="app_name">My contacts app</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="company">company</string>
    <string name="address">address</string>
    <string name="add">add</string>
    <string name="save">Save</string>
    <string name="gender">gender</string>
</resources>