<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContact"
    android:orientation="vertical">

    <!-- TextView for "New contact" -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="New contact"
            android:textSize="30dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- First Name TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Last Name TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Phone Number TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Phone number"
            android:inputType="number"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Company TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/companyTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/company"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Address TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/companyTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/address"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Add Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:minHeight="48dp"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@+id/addressTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
